# testtemplate

./: .env  .gitignore  LICENSE  Makefile  README.md  docker-compose.yml
api/: Dockerfile  entrypoint.sh  pyproject.toml  settings.py  urls.py  wsgi.py
api/accounts/: serializers.py  views.py
api/accounts/migrations/: 0001_initial.py
frontend/: Dockerfile  README.md  entrypoint.sh  nuxt.config.js  package-lock.json  package.json
frontend/components/: Navigation.vue
frontend/forms/: ChangePassword.vue
frontend/layouts/: default.vue
frontend/pages/: about.vue  account.vue  dashboard.vue  forgot.vue  index.vue  login.vue  logout.vue
frontend/pages/password/reset/confirm/_uid/: _token.vue
frontend/pages/registration/: awaiting_confirmation.vue  index.vue
frontend/pages/registration/activate/_uid/: _token.vue
